--- a/poslogin.css
+++ b/poslogin.css
@@ -12,11 +12,18 @@ body{
 }
 
 .navegacao{
-    position: relative;
-    height: 625px;
-    background: #424242;
-    width: 300px;
-    box-shadow: 10px 0 0 #11b92d;
+    position: fixed;
+    height: 657px;
+    background: #868b9c;
+    width: 70px;
+    box-shadow: 10px 0 0 #e39500;
+    border-left: 2px solid #868b9c;
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.navegacao:hover{
+    width: 200px;
 }
 
 .navegacao ul{
@@ -32,6 +39,8 @@ body{
     position: relative;
     list-style: none;
     width: 100%;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
 
 .navegacao ul li a{
@@ -64,4 +73,50 @@ color: white;
     height: 60px;
     line-height: 60px;
     white-space: nowrap;
+}
+
+.navegacao ul li.active{
+    background-color: #e39500;
+}
+
+.navegacao ul li.active a::before{
+    content: '';
+    position: absolute;
+    top: -30px;
+    right: 0;
+    width: 30px;
+    height: 30px;
+    background: #868b9c;
+    border-radius: 50%;
+    box-shadow: 15px 15px 0 #e39500;
+}
+
+.navegacao ul li.active a::after{
+    content: '';
+    position: absolute;
+    bottom: -30px;
+    right: 0;
+    width: 30px;
+    height: 30px;
+    background: #868b9c;
+    border-radius: 50%;
+    box-shadow: 15px -15px 0 #e39500;
+}
+
+/* FIM DO MENU LATERAL */
+
+
+
+/* FIM DO SLIDE */
+
+.container{
+    margin-left: 80px;
+    width: 100%;
+    height: 3000px;
+    background-color: blue;
+    display: flex;
+}
+
+.primeiralinha{
+    
 }
