--- a/poslogin.css
+++ b/poslogin.css
@@ -14,10 +14,10 @@ body{
 .navegacao{
     position: fixed;
     height: 657px;
-    background: #868b9c;
+    background: #868686;
     width: 70px;
     box-shadow: 10px 0 0 #e39500;
-    border-left: 2px solid #868b9c;
+    border-left: 2px solid #868686;
     overflow-x: hidden;
     transition: 0.5s;
 }
@@ -86,7 +86,7 @@ color: white;
     right: 0;
     width: 30px;
     height: 30px;
-    background: #868b9c;
+    background: #61636900;
     border-radius: 50%;
     box-shadow: 15px 15px 0 #e39500;
 }
@@ -98,25 +98,10 @@ color: white;
     right: 0;
     width: 30px;
     height: 30px;
-    background: #868b9c;
+    background: #61636900;
     border-radius: 50%;
     box-shadow: 15px -15px 0 #e39500;
 }
 
 /* FIM DO MENU LATERAL */
 
-
-
-/* FIM DO SLIDE */
-
-.container{
-    margin-left: 80px;
-    width: 100%;
-    height: 3000px;
-    background-color: blue;
-    display: flex;
-}
-
-.primeiralinha{
-    
-}
